2008-12-18  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodecontrolflowmodule.vala:

	Fix temporary variable handling in switch expressions,
	fixes bug 559278

2008-12-18  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:
	* gobject/valaccodemethodmodule.vala:

	Remove statements without effect, fixes bug 530601

2008-12-18  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:

	Fix member initializers for array fields, fixes bug 562600

2008-12-18  Jürg Billeter  <j@bitron.ch>

	* vala/valaassignment.vala:

	Report error when trying to connect signal to instance method
	from static context, fixes bug 502669

2008-12-17  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:

	Fix initialization of static array fields, fixes bug 472545

2008-12-17  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	GTree binding improvements, patch by Evan Nemerson,
	fixes bug 564823

2008-12-17  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/:

	Fix gst_element_make_from_uri binding,
	patch by Zeeshan Ali Khattak, fixes bug 539817

	* vapi/gstreamer-0.10.vapi: regenerated

2008-12-17  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Fix gtk_ui_manager_new_merge_id binding, patch by Evan Nemerson,
	fixes bug 527381

	* vapi/gtk+-2.0.vapi: regenerated

2008-12-17  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/pango/:

	Add PangoScale binding, patch by Evan Nemerson, fixes bug 519922

	* vapi/pango.vapi: regenerated

2008-12-17  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Fix gtk_notebook_page_num binding, patch by Evan Nemerson,
	fixes bug 512437

	* vapi/gtk+-2.0.vapi: regenerated

2008-12-17  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala:
	* vala/valavoidtype.vala:

	Store source_reference for void types

2008-12-17  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:
	* gobject/valagobjectmodule.vala:

	Report error when using class fields or constructors in compact